VGD-729 - Fixed some minor styling issues and created jumpTo method instead of using forward and rewind.

--- a/src/styles/components/playlist.scss
+++ b/src/styles/components/playlist.scss
@@ -1,16 +1,17 @@
 .plyr--playlist-active .plyr__playlist {
-    display: block;
+    opacity: 1;
 }
 .plyr__playlist {
-    display: none;
+    opacity: 0;
     position: absolute;
-    z-index: 3;
+    z-index: 1;
     top: 0;
     right: 0;
     height: 100%;
     width: 33.3%;
     min-width: 200px;
     background: rgba(0, 0, 0, 0.8);
+    transition: opacity 0.2s cubic-bezier(0.4, 0.0, 1, 1);
     &:after {
         content: '';
         position: absolute;
